# console_games

./: LICENSE  README.md
cross_the_road/: CMakeLists.txt
cross_the_road/src/: lane.cpp  main.cpp
include/: game.h
src/: CMakeLists.txt  banner.cpp  game.cpp  lane.cpp
tetris/: CMakeLists.txt  README.md
tetris/include/: game.h
tetris/src/: CMakeLists.txt  block_generator.cpp  game.cpp  main.cpp  tetris_block.cpp
